add component jade

--- a/includes/foot.jade
+++ b/includes/foot.jade
@@ -7,7 +7,9 @@ footer.page-footer.stylish-color-dark
       .col-md-4.col-lg-4.col-xl-4.mx-auto.mt-4
         h6.title.mb-4.font-bold  Matchbox Lab
         p
-          | Please add company description here 
+          | Matchbox.Ltd is a software development startup located in NanJing, inspired by KK. Out of Control and open source ecology.
+        p
+          | We are pursuing to build an agile open source development team and community to explore future. 
       // /.First column
       hr.w-100.clearfix.d-md-none
       // Second column
@@ -16,25 +18,22 @@ footer.page-footer.stylish-color-dark
         p
           a(href='#!') Scrum Training
         p
-          a(href='#!') DorryIT Platform
+          a(href='#!') Dorry Platform
         p
-          a(href='#!') Network Consulting
+          a(href='#!') Network Service Consulting
         p
           a(href='#!') Miscellaneous
       // /.Second column
       hr.w-100.clearfix.d-md-none
       // Fourth column
-      .col-md-4.col-lg-4.col-xl-4.mx-auto.mt-4
+      .col-md-3.col-lg-3.col-xl-3.mx-auto.mt-3
         h6.title.mb-4.font-bold Contact
         p
-          i.fa.fa-home.mr-3
+          // i.fa.fa-home.mr-3
           |  NanJing, JiangSu, China
         p
-          i.fa.fa-envelope.mr-3
+          // i.fa.fa-envelope.mr-3
           |  info@matchbox.lab
-        p
-          i.fa.fa-phone.mr-3
-          |  + 86 12345678
     // /.Fourth column
     // Footer links
     hr
@@ -43,7 +42,7 @@ footer.page-footer.stylish-color-dark
       .col-md-8.col-lg-9
         // Copyright
         p.text-center.text-md-left.grey-text
-          | @ 2017 Copyright: 
+          | @ 2017 Copyright  
           a(href='https://www.matchboxlab.com')
             strong  Matchbox Lab
         // /.Copyright
