--- a/index.jade
+++ b/index.jade
@@ -5,6 +5,6 @@ html
   body
     include ./includes/nav.jade
     include ./includes/banner.jade
-    include ./includes/business.jade
+    include ./includes/projects.jade
     include ./includes/foot.jade
     include ./includes/js.jade
