--- a/includes/head.jade
+++ b/includes/head.jade
@@ -1,9 +1,9 @@
 //- includes/head.jade
 head
-  title My Site
+  title Matchbox Lab
   // Compiled and minified CSS
-  link(rel='stylesheet', href='./assets/mdbootstrap/css/mdb.min.css')
   link(rel='stylesheet', href='./assets/mdbootstrap/css/bootstrap.min.css')
+  link(rel='stylesheet', href='./assets/mdbootstrap/css/mdb.min.css')
   link(rel='stylesheet', href='./assets/mdbootstrap/css/style.css')
   // Compiled and minified JavaScript
 
